wip: android up

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domd/files/domd-h3ulcb-4x2g-kf.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domd/files/domd-h3ulcb-4x2g-kf.cfg
@@ -22,9 +22,6 @@ dt_compatible = [ "shimafuji,kingfisher", "renesas,h3ulcb", "renesas,r8a7795" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
-    "/audio_clk_a",
-    "/audio_clk_b",
-    "/audio_clk_c",
     "/can",
     "/opp_table0",
     "/opp_table1",
@@ -52,7 +49,6 @@ dt_passthrough_nodes = [
     "/soc",
     "/usb3s0",
     "/usb_extal",
-    "/audio-clkout",
     "/avb-mch",
     "/keyboard",
     "/leds",
@@ -92,14 +88,11 @@ dtdev = [
     "/soc/dma-controller@e6700000",
     "/soc/dma-controller@e7300000",
     "/soc/dma-controller@e7310000",
-    "/soc/ethernet@e6800000",
-    "/soc/dma-controller@ec700000",
-    "/soc/dma-controller@ec720000",
     "/soc/usb@ee000000",
+    "/soc/usb@ee020000",
     "/soc/usb@ee080000",
-    "/soc/usb@ee0a0000",
+    "/soc/ethernet@e6800000",
     "/soc/usb@ee080100",
-    "/soc/usb@ee0a0100",
     "/soc/mmc@ee100000",
     "/soc/mmc@ee140000",
     "/soc/mmc@ee160000",
@@ -107,21 +100,15 @@ dtdev = [
     "/soc/imr-lx4@fe870000",
     "/soc/imr-lx4@fe880000",
     "/soc/imr-lx4@fe890000",
-    "/soc/fdpm@fe940000",
-    "/soc/fdpm@fe944000",
     "/soc/fcp@fea2f000",
     "/soc/fcp@fea37000",
-    "/soc/vspm@fe960000",
-    "/soc/vspm@fe920000",
-    "/soc/vspm@fe9a0000",
-    "/soc/vspm@fe9b0000",
     "/soc/impdm0",
     "/soc/gsx_pv0_domd",
     "/soc/gsx_pv1_domd",
     "/soc/gsx_pv2_domd",
     "/soc/gsx_pv3_domd",
-    "/soc/fcpcs_vc0",
-    "/soc/fcpcs_vc1",
+#    "/soc/fcpcs_vc0",
+#    "/soc/fcpcs_vc1",
 ]
 irqs = [
 # gpio@e6050000
@@ -178,16 +165,12 @@ irqs = [
     185,
 # rpc0@ee200000
     70,
-# dma-controller@ec700000
-    352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 382,
-# dma-controller@ec720000
-    383, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 414, 415,
 # usb@ee000000
     134,
+# usb@ee020000
+    136,
 # usb@ee080000
     140,
-# usb@ee0a0000
-    144,
 # mmc@ee100000
     197,
 # mmc@ee140000
@@ -204,28 +187,6 @@ irqs = [
     226,
 # imr-lx4@fe890000
     227,
-# vcp4@fe8d0000
-    412, 413, 255,
-# vcp4@fe910000
-    292, 293,
-# vcp4@fe900000
-    272, 273,
-# fdpm@fe940000
-    294,
-# fdpm@fe944000
-    295,
-# vspm@fe960000
-    298,
-# vspm@fe920000
-    497,
-# vsp@fea28000
-    499,
-# vsp@fea30000
-    500,
-# vspm@fe9a0000
-    476,
-# vspm@fe9b0000
-    477,
 # dma-controller@ffc10000
     480, 481, 482, 483, 484, 485, 486, 487, 488,
 # dma-controller@ffc20000
@@ -323,14 +284,12 @@ iomem = [
     "ec720,10",
 #usb@ee000000
     "ee000,1",
+#usb@ee020000
+    "ee020,1",
 #usb@ee080000
 #usb@ee080100
 #usb-phy@ee080200
     "ee080,1",
-#usb@ee0a0000
-#usb@ee0a0100
-#usb-phy@ee0a0200
-    "ee0a0,1",
 #mmc@ee100000
     "ee100,2",
 #mmc@ee140000
@@ -347,53 +306,6 @@ iomem = [
     "fe880,2",
 #imr-lx4@fe890000
     "fe890,2",
-#vcp4@fe90f000
-    "fe90f,1",
-#vcp4@fe8d0000
-#vcp4@fe8d0000
-    "fe8d0,1",
-#vcp4@fe910000
-#vcp4@fe910000
-    "fe910,1",
-#vcp4@fe900000
-#vcp4@fe900000
-    "fe900,1",
-#fdpm@fe940000
-    "fe940,3",
-#fdpm@fe940000
-    "fe950,1",
-#fdpm@fe944000
-    "fe944,3",
-#fdpm@fe944000
-    "fe951,1",
-#fcp@fea2f000
-    "fea2f,1",
-#fcp@fea37000
-    "fea37,1",
-#vsp@fe960000
-#vspm@fe960000
-    "fe960,8",
-#vspm@fe960000
-    "fe96f,1",
-#vsp@fe920000
-#vspm@fe920000
-    "fe920,8",
-#vspm@fe920000
-    "fe92f,1",
-#vsp@fea28000
-    "fea28,5",
-#vsp@fea30000
-    "fea30,5",
-#vsp@fe9a0000
-#vspm@fe9a0000
-    "fe9a0,8",
-#vspm@fe9a0000
-    "fe9af,1",
-#vsp@fe9b0000
-#vspm@fe9b0000
-    "fe9b0,8",
-#vspm@fe9b0000
-    "fe9bf,1",
 #cmm@fea40000
     "fea40,1",
 #cmm@fea50000
