--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -97,8 +97,9 @@ common_data:
     # Add Capacity Aware migration Strategy (CAS)
     - [MACHINE_FEATURES_append, " cas"]
 
-    # Remove ptest to reduce the build time
-    - [DISTRO_FEATURES_remove, "ptest"]
+    # Remove ptest to reduce the build time,
+    # remove x11 and vulkan to avoid error after removing mesa
+    - [DISTRO_FEATURES_remove, " ptest x11 vulkan"]
 
     # HACK: force ipk instead of rpm b/c it makes troubles to PVR UM build otherwise
     - [PACKAGE_CLASSES, "package_ipk"]
@@ -192,7 +193,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/xen-troops/meta-renesas.git
-        rev: "Renesas-Yocto-v5.1-patched"
+        rev: "Renesas-Yocto-v5.9-patched"
       - type: git
         url: https://git.yoctoproject.org/meta-selinux
         rev: dunfell
@@ -247,7 +248,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/xen-troops/meta-renesas.git
-        rev: "Renesas-Yocto-v5.1-patched"
+        rev: "Renesas-Yocto-v5.9-patched"
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
@@ -427,8 +428,8 @@ parameters:
           domd:
             sources:
               - type: git
-                url: "https://github.com/CogentEmbedded/meta-rcar.git"
-                rev: v5.1.0
+                url: "https://github.com/xen-troops/meta-rcar.git"
+                rev: Renesas-Yocto-v5.9-patched
             builder:
               layers:
                 - "../meta-rcar/meta-rcar-gen3-adas"
