domd/domu: Install automation and debug applicaitons
- Added expect, ltrace, strace, evtest tools to the DomD & DomU

Motivation:

We need the above-mentioned set of the tools in order to:
- Automate communication with the target device ( expect )
- Debug the Linux input events ( evtest )
- Debug system calls of our applications ( strace )
- Debug shared library calls of our applicaitons ( ltrace )

Tested on h3ulcb-4x2g-kf machine.

Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>
Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -103,6 +103,9 @@ common_data:
     # HACK: force ipk instead of rpm b/c it makes troubles to PVR UM build otherwise
     - [PACKAGE_CLASSES, "package_ipk"]
 
+    # Additional testing and debug tools
+    - [IMAGE_INSTALL_append, "expect ltrace strace evtest"]
+
   # The same set of layers and configs is used both in DomD and DomU
   # to build a DDK from source code
   ddk_source_overrides: &DDK_SOURCE_OVERRIDES
