prod-devel-rcar.yaml: Install some apps to test GPU/Display
This requires corresponding change in "meta-xt-rcar" layer to make
the gles-user-module as the provider of "virtual/libgl" to
resolve unbuildable dependency chain ['glmark2', 'virtual/libgl'].
Likely this is the consequence of removing mesa from rcar-gen3.

Tested on salvator-x-h3-4x2g and h3ulcb-4x2g-kf machines.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -106,6 +106,9 @@ common_data:
     # Additional testing and debug tools
     - [IMAGE_INSTALL_append, "expect ltrace strace evtest"]
 
+    # Install some apps to test GPU/Display
+    - [IMAGE_INSTALL_append, " glmark2 kmscube"]
+
   # The same set of layers and configs is used both in DomD and DomU
   # to build a DDK from source code
   ddk_source_overrides: &DDK_SOURCE_OVERRIDES
