--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -27,7 +27,8 @@ variables:
   XT_PREBUILT_GSX_DIR: ""
   ANDROID_KERNEL_BUILD_CONFIG: "//common-modules/virtual-device:virtual_device_aarch64"
   ANDROID_KERNEL_DEPLOY_DIR: "out/deploy/common-modules/virtual-device/virtual_device_aarch64"
-  ANDROID_DEVICE: "aosp_xenvm_trout_arm64"
+  ANDROID_DEVICE: "xenvm_trout_arm64"
+  ANDROID_LUNCH_TARGET: "aosp_xenvm_trout_arm64-userdebug"
 common_data:
   # Sources used by all yocto-based domains
   sources: &COMMON_SOURCES
@@ -368,7 +369,7 @@ components:
         - "TARGET_PREBUILT_KERNEL=../%{ANDROID_KERNEL_DIR}/%{ANDROID_KERNEL_DEPLOY_DIR}/Image"
         - "TARGET_PREBUILT_MODULES_DIR=../%{ANDROID_KERNEL_DIR}/%{ANDROID_KERNEL_DEPLOY_DIR}/initramfs/"
         - "DDK_KM_PREBUILT_MODULE=%{XT_DOMA_DDK_KM_PREBUILT_MODULE}"
-      lunch_target: "%{ANDROID_DEVICE}-userdebug"
+      lunch_target: "%{ANDROID_LUNCH_TARGET}"
       target_images:
         - "out/target/product/%{ANDROID_DEVICE}/boot.img"
         - "out/target/product/%{ANDROID_DEVICE}/super.img"
@@ -549,12 +550,21 @@ parameters:
               boot_a:
                 gpt_type: 49A4D17F-93A3-45C1-A0DE-F50B2EBE2599 # Android boot 1
                 type: raw_image
-                size: 30 MiB
+                size: 70 MiB
                 image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/boot.img"
               boot_b:
                 gpt_type: 20117F86-E985-4357-B9EE-374BC1D8487D # Android boot 2
                 type: empty
-                size: 30 MiB
+                size: 70 MiB
+              vendor_boot_a:
+                gpt_type: DF24E5ED-8C96-4B86-B00B-79667DC6DE11 # Android sparse 1
+                type: raw_image
+                size: 70 MiB
+                image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/vendor_boot.img"
+              vendor_boot_b:
+                gpt_type: 7C29D3AD-78B9-452E-9DEB-D098D542F092 # Android sparse 2
+                type: empty
+                size: 70 MiB
               vbmeta_a:
                 gpt_type: 19A710A2-B3CA-11E4-B026-10604B889DCF # Android meta
                 type: raw_image
