--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
@@ -8,29 +8,13 @@ kernel = "/usr/lib/xen/boot/u-boot-doma"
 
 device_tree = "/usr/lib/xen/boot/doma.dtb"
 
-dtdev = [
-    "/soc/gsx_pv0_domu",
-    "/soc/gsx_pv1_domu",
-    "/soc/gsx_pv2_domu",
-    "/soc/gsx_pv3_domu",
-]
-
-irqs = [
-    151
-]
-
-iomem=[
-# GSX
-    "0xfd010,1@0xfd000",
-]
-
 dt_passthrough_nodes = [
     "/firmware",
     "/ion",
 ]
 
 # Kernel command line options
-extra = "androidboot.boot_devices=51712 androidboot.hardware=xenvm init=/init ro rootwait console=hvc0 cma=256M@1-2G androidboot.selinux=permissive pvrsrvkm.DriverMode=1 androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/ xt_page_pool=2097152 xt_cma=4194304"
+extra = "androidboot.boot_devices=51712 androidboot.hardware=xenvm init=/init ro rootwait console=hvc0 cma=256M androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
 
 # Initial memory allocation (MB)
 memory = 5120
@@ -38,11 +22,14 @@ memory = 5120
 # Number of VCPUS
 vcpus = 4
 
-max_grant_frames = 64
+max_grant_frames = 512
+
+# Create virtio related device-tree nodes (virtio-mmio and PCI host bridge),
+# use "0" for Xen foreign mappings, and Qemu domid for Xen grant mappings
+virtio_qemu_domid = 1
 
 on_crash = 'preserve'
 
 tee = 'optee'
 
-# disk, vgsx, vif, vdispl, vkb, vsnd
-# are provided in separate file doma-vdevices.cfg
+disk = ['format=raw,target=sda,dev=xvda,driver=virtio-blk']
