--- a/meta-xt-prod-devel-rcar-driver-domain/recipes-kernel/linux/files/salvator-generic-doma.dts
+++ b/meta-xt-prod-devel-rcar-driver-domain/recipes-kernel/linux/files/salvator-generic-doma.dts
@@ -7,21 +7,6 @@
 	#address-cells = <2>;
 	#size-cells = <2>;
 
-	passthrough {
-		compatible = "simple-bus";
-		ranges;
-		#address-cells = <2>;
-		#size-cells = <2>;
-
-		gsx: gsx@fd000000 {
-			compatible = "renesas,gsx";
-			reg = <0 0xfd000000 0 0x3ffff>;
-			interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
-			/*clocks = <&cpg CPG_MOD 112>;*/
-			/*power-domains = <&sysc R8A7795_PD_3DG_E>;*/
-		};
-	};
-
 	firmware {
 		android {
 			compatible = "android,firmware";
@@ -29,7 +14,7 @@
 			vbmeta {
                                 compatible = "android,vbmeta";
                                 /* partitions witch can be mount in the first stage */
-                                parts = "vbmeta,boot";
+                                parts = "vbmeta,boot,vendor_boot";
                                 by_name_prefix="/dev/block/by-name";
                         };
 		};
