DomA DTS and Xen config modification
- Added back usage of the pvblock disk device, as we were not able to
make U-Boot boot the system with the virtio block device
- Removed ion node from the DomA DTS

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
@@ -32,4 +32,7 @@ on_crash = 'preserve'
 
 tee = 'optee'
 
-disk = ['format=raw,target=sda,dev=xvda,driver=virtio-blk']
+# Android uses disk with it's own partitions so no index after xvda
+# Option `target` must be last element in list. For explanation see
+# https://xenbits.xenproject.org/docs/4.15-testing/man/xl-disk-configuration.5.html
+disk = [ 'backend=DomD, vdev=xvda, target=/dev/STORAGE_PART3' ]
