Remove androidboot.vendor.vehiclehal parameters
androidboot.vendor.vehiclehal parameters are no longer needed to be
mentioned in the kernel command line. They will be mentioned directly in
the corresponding systemd services.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
@@ -14,7 +14,7 @@ dt_passthrough_nodes = [
 ]
 
 # Kernel command line options
-extra = "androidboot.selinux=permissive androidboot.hardware.gralloc=minigbm androidboot.hardware.hwcomposer=drm_minigbm androidboot.hardware.egl=mesa androidboot.boot_devices=10000000.pcie androidboot.vendor.vehiclehal.server.cid=2 androidboot.vendor.vehiclehal.server.port=9300 androidboot.vendor.vehiclehal.server.power_state_file='/data/data/power_state_marker' androidboot.vendor.vehiclehal.server.power_state_socket='/data/data/power_state_socket' androidboot.fstab_suffix=trout androidboot.hardware=xenvm_trout loglevel=0 androidboot.boot_devices=51712 init=/init ro rootwait console=hvc0 cma=256M androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
+extra = "androidboot.selinux=permissive androidboot.hardware.gralloc=minigbm androidboot.hardware.hwcomposer=drm_minigbm androidboot.hardware.egl=mesa androidboot.boot_devices=10000000.pcie androidboot.fstab_suffix=trout androidboot.hardware=xenvm_trout loglevel=0 androidboot.boot_devices=51712 init=/init ro rootwait console=hvc0 cma=256M androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
 
 # Initial memory allocation (MB)
 memory = 5120
