--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -375,10 +375,12 @@ components:
       lunch_target: "%{ANDROID_LUNCH_TARGET}"
       target_images:
         - "out/target/product/%{ANDROID_DEVICE}/boot.img"
-        - "out/target/product/%{ANDROID_DEVICE}/super.img"
-        - "out/target/product/%{ANDROID_DEVICE}/userdata.img"
+        - "out/target/product/%{ANDROID_DEVICE}/vendor_boot.img"
         - "out/target/product/%{ANDROID_DEVICE}/vbmeta.img"
-        - "out/target/product/%{ANDROID_DEVICE}/system.img"
+        - "out/target/product/%{ANDROID_DEVICE}/vbmeta_system.img"
+        - "out/target/product/%{ANDROID_DEVICE}/userdata.img"
+        - "out/target/product/%{ANDROID_DEVICE}/super.img"
+
       additional_deps:
         - "../%{ANDROID_KERNEL_DIR}/%{ANDROID_KERNEL_DEPLOY_DIR}/Image"
         - "../%{ANDROID_KERNEL_DIR}/%{ANDROID_KERNEL_DEPLOY_DIR}/initramfs.img"
