--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-generic-h3-4x2g.cfg
@@ -14,10 +14,10 @@ dt_passthrough_nodes = [
 ]
 
 # Kernel command line options
-extra = "androidboot.selinux=permissive androidboot.hardware.gralloc=minigbm androidboot.hardware.hwcomposer=drm_minigbm androidboot.hardware.egl=mesa androidboot.boot_devices=10000000.pcie androidboot.fstab_suffix=trout androidboot.hardware=xenvm_trout loglevel=0 androidboot.boot_devices=51712 init=/init ro rootwait console=hvc0 cma=256M androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
+extra = "androidboot.vendor.vehiclehal.server.cid=2 androidboot.vendor.vehiclehal.server.port=9210 androidboot.vendor.vehiclehal.server.psf=/data/data/power.file androidboot.vendor.vehiclehal.server.pss=/data/data/power.socket androidboot.selinux=permissive androidboot.hardware.gralloc=minigbm androidboot.hardware.hwcomposer=drm_minigbm androidboot.hardware.egl=mesa androidboot.boot_devices=10000000.pcie androidboot.fstab_suffix=trout androidboot.hardware=xenvm_trout loglevel=0 androidboot.boot_devices=51712 init=/init ro rootwait console=hvc0 cma=256M androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
 
 # Initial memory allocation (MB)
-memory = 5120
+memory = 4096
 
 # Number of VCPUS
 vcpus = 4
