--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -223,7 +223,7 @@ components:
         - [PACKAGECONFIG:remove:pn-libsdl2, " x11 opengl"]
         - [PACKAGECONFIG:remove:pn-libepoxy, " x11"]
         - [PACKAGECONFIG:remove:pn-gtk+3, " x11"]
-        - [PACKAGECONFIG:append:pn-qemu, " sdl virglrenderer xen virtfs epoxy gtk+"]
+        - [PACKAGECONFIG:append:pn-qemu, " sdl virglrenderer xen virtfs epoxy gtk+ vhost"]
         - [PACKAGECONFIG:remove:pn-qemu, " kvm"]
         - [DISTRO_FEATURES:append, " xen vmsep"]
         - [QEMU_TARGETS, "aarch64"]
