--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domd/files/domd-salvator-x-h3-4x2g.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domd/files/domd-salvator-x-h3-4x2g.cfg
@@ -14,9 +14,9 @@ device_tree = "/usr/lib/xen/boot/domd.dtb"
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "video=VGA-1:d video=LVDS-1:d root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
+#extra = "video=VGA-1:d video=LVDS-1:d root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 vhost_xen.nogrant=0"
 # Uncomment this when using block device as a boot device
-extra = "video=VGA-1:d video=LVDS-1:d root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
+extra = "video=VGA-1:d video=LVDS-1:d root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 vhost_xen.nogrant=0"
 
 driver_domain = 1
 
