prod-devel-rcar.yaml: Do not install kernel-module-cmemdrv into DomU
Remove unused module which gets broken with Linux v6.4.

TODO: Consider making DomU generic by not including meta-renesas/meta-rcar-gen3
layer (this requires a bit of rework).

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -321,6 +321,8 @@ components:
         # Install kmscube which doesn't require libgbm
         - [IMAGE_INSTALL:append, " kmscube"]
 
+        # Remove unused module which gets broken with Linux v6.4
+        - [IMAGE_INSTALL:remove, " kernel-module-cmemdrv"]
       layers:
         - "../meta-openembedded/meta-oe"
         - "../meta-openembedded/meta-filesystems"
