--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -449,7 +449,7 @@ parameters:
         variables:
           MACHINE: "h3ulcb"
           SOC_FAMILY: "r8a7795"
-          XT_DOMD_CONFIG_NAME: "domd-h3ulcb-4x2g-kf.cfg"
+          XT_DOMD_CONFIG_NAME: "domd-virt-hwdom.cfg"
           XT_DOMU_CONFIG_NAME: "domu-generic-h3-4x2g.cfg"
           XT_DOMA_CONFIG_NAME: "doma-generic-h3-4x2g.cfg"
           XT_OP_TEE_FLAVOUR: "salvator_h3_4x2g"
